[package]
name = "secugen_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[build-dependencies]
bindgen = "0.66.1"
