[package]
name = "secugen_rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the SecuGen SDK"
categories = ["api-bindings"]
keywords = ["sdk","secugen","fingerprint","biometrics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]
name = "secugen_rs"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.66.1"
